2012-12-15	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/ucinternal.cc: Fixed bug #3596110 '"Your hands are too full" even
	  when carrying no inventory'.
	* objs/contain.*, objs/objs.h: Use bool instead of int for add_quantity.
	* mapedit/shapeedit.cc: Fixed bug #3172487 "Exult Studio crash from removing
	  frame name property". Fixed incorrect pointer initialization. Also fixed
	  incorrect initialization of fields for all vector data if all entries are
	  invalid (e.g., present in static data but deleted in patch) and ensured
	  that treeview rows are only created if the element in question is not an
	  invalid one.
	* tools/expack.cc: Expack now extracts to files with 5-digit numbers, as per
	  #3163084 "Expack cannot repack extracted files using a wildcard"; however,
	  this does not mean wildcards will work in non-POSIX shells. Fixed segfault
	  when extracting from a flex file due to double delete.
	* gamewin.cc: Default back to '(default)' if could not open custom keys or
	  autonotes files. Made alignment and spacing consistent.
	* all: (rev 7211) Made alignment and spacing consistent.
	* all: (rev 7212) Applied patch #3591998 "Fixed compiler warnings".
	* all: (rev 7213) eliminated a few more warnings.
	
2012-12-12	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* audio/Midi.cc: Fixing segfault when you change the Midi device type and
	  disable midi in one go.
	
2012-12-11	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* exult.cc: Reverting revision 7197 as it can sometimes cause the mouse to
	  lock on the center of the screen. A better workaround for touchpad issues
	  for now is to disable full-screen fast mouse.
	* conf/Configuration.cc: Checking for absolute paths after translating any
	  system paths.
	* files/utils.cc: Consolidating some duplicate code. Spaces to tabs. System
	  paths can now be recursively defined, so putting "<HOME>" as a path in
	  exult.cfg will correctly translate if used in the definition of other